--- a/cmd/rpc/etc/user-rpc-dev.yaml
+++ b/cmd/rpc/etc/user-rpc-dev.yaml
@@ -1,5 +1,6 @@
 Name: user.rpc
-ListenOn: 0.0.0.0:8080
+ListenOn: 0.0.0.0:2001
+Mode: dev
 Etcd:
   Hosts:
   - 127.0.0.1:2379
@@ -7,7 +8,3 @@ Etcd:
 Mysql:
   DataSource: root:jiangxiong@(127.0.0.1:3306)/greet?charset=utf8mb4&parseTime=True
   TablePrefix: greet
-CacheRedis:
-  - Host: 127.0.0.1:6379
-    Pass: jiangxiong
-    Type: node
