--- a/cmd/rpc/etc/user-rpc-dev.yaml
+++ b/cmd/rpc/etc/user-rpc-dev.yaml
@@ -8,3 +8,8 @@ Etcd:
 Mysql:
   DataSource: root:jiangxiong@(127.0.0.1:3306)/greet?charset=utf8mb4&parseTime=True
   TablePrefix: greet
+Telemetry:
+  Name: usercenter-rpc
+  Endpoint: http://127.0.0.1:14268/api/traces
+  Sampler: 1.0
+  Batcher: jaeger
