--- a/cmd/rpc/etc/user-rpc-dev.yaml
+++ b/cmd/rpc/etc/user-rpc-dev.yaml
@@ -1,6 +1,6 @@
-Name: user.rpc
+Name: user-rpc
 ListenOn: 0.0.0.0:2001
-Mode: pro
+Mode: dev
 Etcd:
   Hosts:
   - 127.0.0.1:2379
@@ -15,3 +15,9 @@ Telemetry:
   Endpoint: http://127.0.0.1:14268/api/traces
   Sampler: 1.0
   Batcher: jaeger
+
+#监控
+Prometheus:
+  Host: 0.0.0.0
+  Port: 4004
+  Path: /metrics
